--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,9 +1,10 @@
-#Tue May 21 19:07:47 CST 2013
 eclipse.preferences.version=1
 encoding//config/settings.py=utf-8
 encoding//config/url.py=utf-8
 encoding//controllers/pythonapi.py=utf-8
 encoding//controllers/selenium.py=utf-8
+encoding//langfiles/index.en=UTF-8
+encoding//sourcefile/00_note_body.html=UTF-8
 encoding//tools/get_source.py=utf-8
 encoding//tools/lang.py=utf-8
 encoding/code.py=utf-8
